updated layout, removed pictures, fixed issue where vimeo modals loaded on page startup. Stopped video from displalying on smaller devices.

--- a/RedCityProductions/Content/Site.css
+++ b/RedCityProductions/Content/Site.css
@@ -15,9 +15,7 @@ body {
     overflow-x: hidden;
 }
 
-.view-animate {
-    width: 100%;
-}
+
 
 
 
@@ -27,8 +25,10 @@ body {
     height: 100px;
     position: fixed;
     text-align: center;
-    background-color: rgba(67, 73, 83, 1);
-    border-bottom: 2px solid brown;
+    background-color: rgba(165, 170, 67, 1);
+    -webkit-box-shadow: 0px -7px 157px 9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px -7px 157px 9px rgba(0,0,0,0.75);
+    box-shadow: 0px -7px 157px 9px rgba(0,0,0,0.75);
 }
 
 .index-nav-container-jumbo {
@@ -83,7 +83,6 @@ body {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(polina.jpg) no-repeat;
     background-size: cover;
 }
 
@@ -104,14 +103,20 @@ body {
 .home-top-banner-jumbo-text {
     white-space: pre;
     text-align: center;
-    margin: 130px 0px;
-    width: 90%;
+    margin: 130px auto;
+    width: 50%;
     font-size: 30px;
     text-align: center;
 }
 
+.home-top-banner-jumbo-button {
+    width: 500px;
+    margin: auto;
+}
+
 .home-top-banner-wrapper {
     position: relative;
+   
     color: white;
     background-size: cover;
     background-attachment: fixed;
@@ -131,7 +136,7 @@ body {
     overflow: hidden;
     background-image: url(/Content/Images/About_bg_image1.jpg);
     background-size: cover;
-    color: wheat;
+    color: #ede2de;
     position: relative;
     height: 1000px;
 }
@@ -142,7 +147,7 @@ body {
     }
 
 .latest-work-section {
-    background-color: rgba(0,0,0,.8);
+    background-color: rgba(67, 58, 51,.95);
     overflow: hidden;
     color: white;
 }
@@ -173,12 +178,13 @@ body {
                 opacity: 1;
             }
 
-
 .body-container {
     margin: 50px 0px;
     width: 100%;
     overflow: hidden;
 }
+
+
 
 .body {
     max-width: 1500px;
@@ -195,14 +201,22 @@ body {
     text-align: left;
     float: left;
     width: 30%;
+    transition: all ease .5s;
 }
+
+
+.section:hover .title-section {
+    padding-left: 70px;
+}
+
 
 
 .content-section {
     display: inline-block;
     float: left;
     width: 70%;
-    border-left: 1px solid black;
+    border-left: 1px solid;
+
 }
 
 
@@ -213,12 +227,14 @@ body {
     float: left;
     width: 70%;
     padding: 0px 30px;
-    border-left: 1px solid black;
+    border-left: 1px solid;
+
 }
 
 
 
 .column2 {
+    text-indent: 20px;
     text-align: left;
     padding: 0px 30px;
     font-size: 18px;
@@ -233,6 +249,7 @@ body {
     width: 50%;
     display: inline-block;
     float: left;
+
 }
 
 .column3 {
@@ -250,7 +267,22 @@ body {
     float: left;
 }
 
-@media(max-width: 900px) {
+
+
+@media(max-width: 1000px) {
+
+    .home-top-banner-wrapper {
+        background-image: url(/Content/Images/audi_cover1.jpg);
+        background-size: 100% cover;
+    }
+
+    .home-top-banner-jumbo-video-background {
+        display: none;
+    }
+
+    .latest-work-section {
+        background-color: #433A33;
+}
 
     .body {
         text-align: center;
@@ -271,7 +303,9 @@ body {
         display: block;
         float: none;
         width: 100%;
-        border-left: 0px solid black;
+        border-left: 0px solid;
+    transition: all ease .5s;
+
     }
 
 
@@ -282,7 +316,9 @@ body {
         float: none;
         width: 100%;
         padding: 0px;
-        border-left: 0px solid black;
+        border-left: 0px solid;
+    transition: all ease .5s;
+
     }
 
 
@@ -291,15 +327,20 @@ body {
         padding: 0px;
         font-size: 18px;
         width: 100%;
-        display: inline-block;
+        display: block;
+
         float: none;
+    transition: all ease .5s;
+
     }
 
     .column2-no-padding {
         padding: 0px;
         width: 100%;
-        display: inline-block;
+        display: block;
         float: none;
+    transition: all ease .5s;
+
     }
 
     .column3 {
@@ -318,93 +359,4 @@ body {
     }
 }
 
-.home-contact-container {
-    height: 400px;
-    overflow: hidden;
-    position: relative;
-    background: linear-gradient(to bottom, rgba(248,80,50,1) 0%, rgba(231,56,39,1) 100%);
-    color: white;
-    z-index: -1;
-}
 
-.home-contact-map {
-    width: 300px;
-    height: 300px;
-}
-
-.home-contact-container .second {
-    right: 0px;
-    bottom: 0px;
-}
-
-.home-contact-both-container {
-    width: 50%;
-    display: inline-block;
-    text-align: center;
-    position: fixed;
-    bottom: 50px;
-}
-
-.home-contact-name-number {
-    font-size: 20px;
-    margin: 40px 0px;
-    display: inline-block;
-    width: 100%;
-    text-align: left;
-}
-
-.home-contact-info-container {
-    width: 300px;
-    margin: auto;
-}
-
-@media(max-width: 1200px) {
-    .home-end-team-container .first {
-        float: none;
-    }
-
-    .home-end-team-container .second {
-        float: none;
-    }
-}
-
-@media(max-width:1000px) {
-    .home-top-banner-column {
-        display: block;
-        margin: auto;
-        width: 80%;
-        margin-bottom: 30px;
-    }
-
-    .home-end-container {
-        background-size: 100%;
-        -webkit-background-size: 100%;
-        -moz-background-size: 100%;
-        -o-background-size: 100%;
-        background-attachment: initial;
-    }
-
-    .home-top-banner-wrapper {
-        background-size: 100%;
-        -webkit-background-size: 100%;
-        -moz-background-size: 100%;
-        -o-background-size: 100%;
-        background-attachment: initial;
-    }
-
-    .home-middle-banner-wrapper {
-        background-size: 100%;
-        -webkit-background-size: 100%;
-        -moz-background-size: 100%;
-        -o-background-size: 100%;
-        background-attachment: initial;
-    }
-
-    .home-top-banner-column-text {
-        display: block;
-        font-size: 25px;
-        width: 100%;
-        max-width: 100%;
-        text-align: center;
-    }
-}
